# occ-ai-dep-whispercpp

./: .gitignore  CMakeLists.txt  README.md  build-linux.sh  build-macos.sh  build-windows.ps1  generate-checksums.ps1  setup_cuda.ps1
.github/workflows/: build.yml
patches/: disable-new-accelerate-api-macos-less-than-13-3.patch  fix-ggml-metal-install-source-dir.patch  whispercpp-patches.patch
